--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  display: flex;
+  background-color: #020230;
+  color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  width: 75%;
+  background: url("./assets/bg.jpg") center;
+  display: flex;
+  flex-direction: column;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top {
+  height: 50%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bottom {
+  height: 50%;
+}
+.trivia {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+}
+.question {
+  width: 80%;
+  background-color: black;
+  border: 2px solid white;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 20px;
+}
+.answers {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+}
+.answer {
+  width: 40%;
+  padding: 10px;
+  text-align: center;
+  background-color: aquamarine;
+  border: 1px solid black;
+  font-size: 20px;
+  border-radius: 10px;
+  font-weight: 300;
+  cursor: pointer;
+  margin: 0 10px 20px 10px;
+}
+.answer:hover,
+.answer.active {
+  background: mediumblue;
+}
+.answer.correct {
+  animation: correct 3s ease forwards;
+}
+@keyframes correct {
+  0%,
+  22%,
+  42% {
+    background: mediumblue;
+  }
+  20%,
+  40%,
+  60% {
+    background: linear-gradient(#0e0124, #22074d);
+  }
+  62%,
+  100% {
+    background: green;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+.answer.wrong {
+  animation: wrong 3s ease forwards;
+}
+@keyframes wrong {
+  0%,
+  22%,
+  42% {
+    background: mediumblue;
+  }
+  20%,
+  40%,
+  60% {
+    background: linear-gradient(#0e0124, #22074d);
+  }
+  62%,
+  100% {
+    background: crimson;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timer {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: 700;
+  position: relative;
+  bottom: 10px;
+  left: 80px;
+}
+.pyramid {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.moneyList {
+  list-style: none;
+  width: 100%;
+  padding: 20px;
+}
+.moneyListItem {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+}
+.moneyListItem.active {
+  background-color: teal;
+}
+.moneyListNumber {
+  font-size: 18px;
+  font-weight: 100;
+  width: 30%;
+}
+.moneyListAmount {
+  font-size: 20px;
+  font-weight: 300;
 }
